// plugins: 이 빌드 스크립트에서 사용할 Gradle 플러그인들을 정의합니다.
// 플러그인은 빌드 프로세스에 새로운 기능(Task)들을 추가해줍니다.
buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'org.flywaydb:flyway-database-postgresql:10.17.0'
    }
}

plugins {
    // Java 프로젝트를 빌드하는 데 필요한 기본적인 기능(컴파일, 테스트 등)을 제공합니다.
    id 'java'
    // Spring Boot 애플리케이션을 쉽게 빌드하고 실행할 수 있도록 돕는 핵심 플러그인입니다.
    // 실행 가능한 'fat JAR' 생성, 의존성 버전 관리 등의 기능을 담당합니다.
    id 'org.springframework.boot' version '3.3.4'
    // Spring Boot가 추천하는 의존성들의 버전 관리를 자동으로 해주는 플러그인입니다.
    // 이를 통해 라이브러리 간 버전 충돌 문제를 최소화할 수 있습니다.
    id 'io.spring.dependency-management' version '1.1.5'
    // Git 커밋 정보(.git 디렉토리)를 읽어서 'git.properties' 파일을 생성해주는 플러그인입니다.
    // 이 정보는 Spring Boot Actuator의 /info 엔드포인트를 통해 노출되어, 현재 배포된 버전의 정확한 커밋 ID를 확인할 수 있게 해줍니다. (운영 환경에서 디버깅 시 매우 유용)
    id 'com.gorylenko.gradle-git-properties' version '2.4.1'
    // Flyway Gradle 플러그인: CLI에서도 마이그레이션을 실행할 수 있도록 태스크 제공
    id 'org.flywaydb.flyway' version '10.17.0'
}

configurations.maybeCreate('flyway')

// group, version: Maven이나 Ivy 같은 저장소에서 이 프로젝트를 고유하게 식별하기 위한 좌표입니다.
// com.dormmate 그룹의 0.0.1-SNAPSHOT 버전을 의미합니다.
group = 'com.dormmate'
version = '0.0.1-SNAPSHOT'

// java: Java 관련 설정을 정의하는 블록입니다.
java {
    // toolchain: 이 프로젝트를 빌드하고 실행할 JDK 버전을 명시적으로 지정합니다.
    // 개발자나 CI 서버에 설치된 JDK 버전과 무관하게 항상 지정된 버전(21)을 사용하도록 보장하여 일관된 빌드 환경을 만듭니다.
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// configurations: 의존성 그룹의 특성을 설정합니다.
configurations {
    // compileOnly 그룹은 annotationProcessor 그룹의 의존성을 상속받도록 설정합니다.
    // Lombok 같은 라이브러리를 사용할 때, compileOnly와 annotationProcessor를 둘 다 추가해야 하는 번거로움을 줄여줍니다.
    compileOnly {
        extendsFrom annotationProcessor
    }
    flyway {
        canBeConsumed = false
        canBeResolved = true
    }
}

// repositories: 의존성을 다운로드할 원격 저장소를 지정합니다.
repositories {
    // Maven Central은 가장 널리 사용되는 공개 라이브러리 저장소입니다.
    mavenCentral()
}

// dependencies: 이 프로젝트가 필요로 하는 라이브러리(의존성) 목록입니다.
dependencies {
    // Spring Boot Starters
    // Spring Boot Starter는 특정 기능에 필요한 의존성들을 모아놓은 '꾸러미'입니다.
    // JPA(Java Persistence API)를 사용하기 위한 스타터. Hibernate, Spring Data JPA 등이 포함됩니다.
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    
    // springdoc: Controller 어노테이션을 스캔해 런타임 OpenAPI를 생성.
    // 이 라이브러리가 API 컨트롤러(@RestController 등)를 분석하여 '/v3/api-docs' 경로에 OpenAPI 3.0 명세를 동적으로 생성해줍니다.
    // CI 과정에서 이 "Runtime(생성)" 명세와 우리가 작성한 "Seed(설계)" 명세를 비교하여 문서와 코드의 불일치(Drift)를 자동으로 잡아냅니다.
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    // Redis를 사용하기 위한 스타터. Lettuce 클라이언트 라이브러리가 포함됩니다.
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    // Spring Security를 사용하기 위한 스타터. 인증/인가 기능을 제공합니다.
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // 웹 애플리케이션(API 서버)을 만들기 위한 스타터. Tomcat, Spring MVC 등이 포함됩니다.
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // WebSocket 통신을 지원하기 위한 스타터입니다.
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    // Actuator: 운영 환경에서 애플리케이션을 모니터링하고 관리하는 기능(/health, /info, /metrics 등)을 제공합니다.
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    // @Valid 어노테이션을 사용한 DTO 유효성 검증 기능을 제공합니다.
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    
    // Database & Migration - Flyway 버전 명시
    // 데이터베이스 스키마 변경을 버전 관리하고 자동으로 적용해주는 Flyway의 핵심 라이브러리입니다.
    implementation 'org.flywaydb:flyway-core:10.17.0'
    implementation 'org.flywaydb:flyway-database-postgresql:10.17.0'
    add('flyway', 'org.flywaydb:flyway-core:10.17.0')
    add('flyway', 'org.flywaydb:flyway-database-postgresql:10.17.0')
    add('flyway', 'org.postgresql:postgresql')
    // runtimeOnly: 이 의존성은 컴파일 시점에는 필요 없고, 실행 시점(Runtime)에만 필요합니다.
    // PostgreSQL JDBC 드라이버로, 애플리케이션이 실행되어 DB에 연결할 때 사용됩니다.
    runtimeOnly 'org.postgresql:postgresql'
    
    // JWT & Security
    // JWT(JSON Web Token)를 생성하고 검증하기 위한 라이브러리입니다.
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5' // JWT의 인터페이스(API)
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5' // 실제 구현체
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5' // JSON 파싱을 위한 Jackson 연동 모듈
    
    // Monitoring & Logging
    // Micrometer 라이브러리를 통해 수집한 애플리케이션 메트릭을 Prometheus가 수집할 수 있는 형식으로 노출해줍니다.
    implementation 'io.micrometer:micrometer-registry-prometheus'

    
    // Utilities
    // compileOnly: 이 의존성은 컴파일 시점에만 필요하고, 빌드 결과물(JAR)에는 포함되지 않습니다.
    // Lombok은 @Getter, @Setter 등의 어노테이션으로 반복적인 코드를 자동으로 생성해주므로 컴파일 시에만 필요합니다.
    compileOnly 'org.projectlombok:lombok'
    // annotationProcessor: 컴파일 시점에 어노테이션을 처리하여 코드를 생성하는 역할을 합니다. Lombok이 대표적입니다.
    annotationProcessor 'org.projectlombok:lombok'
    
    // Test
    // testImplementation: 이 의존성들은 오직 테스트 코드를 컴파일하고 실행할 때만 사용됩니다.
    // Spring Boot 애플리케이션 테스트에 필요한 거의 모든 것(JUnit 5, Mockito, AssertJ 등)을 포함하는 스타터입니다.
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // Spring Security가 적용된 API를 테스트하기 위한 유틸리티를 제공합니다.
    testImplementation 'org.springframework.security:spring-security-test'
    // testRuntimeOnly: 테스트를 실행하는 시점에만 필요한 의존성입니다.
    // JUnit Platform을 실행하는 런처 역할을 합니다.
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
}

// tasks: Gradle이 수행하는 작업(Task)의 설정을 변경합니다.
tasks.named('test') {
    // 'test'라는 이름의 Task를 찾아서 설정을 추가합니다.
    // JUnit 5를 테스트 프레임워크로 사용하도록 지정합니다.
    useJUnitPlatform()
}

tasks.withType(org.flywaydb.gradle.task.AbstractFlywayTask).configureEach {
    configurations = ['flyway', 'runtimeClasspath'] as String[]
}

// Spring Boot 플러그인의 추가 설정을 정의합니다.
springBoot {
    // 이 설정을 추가하면, 빌드 시점에 'META-INF/build-info.properties' 파일이 생성됩니다.
    // 이 파일에는 프로젝트 버전, 빌드 시간 등의 정보가 담겨 있으며, Actuator의 /info 엔드포인트를 통해 외부로 노출할 수 있습니다.
    buildInfo()
}

flyway {
    url = System.getenv('DB_URL') ?: 'jdbc:postgresql://localhost:5432/prod_dormmate'
    user = System.getenv('DB_USERNAME') ?: 'dormmate_user'
    password = System.getenv('DB_PASSWORD') ?: 'pleasesetup'
    schemas = ['public']
    baselineOnMigrate = true
    locations = ["filesystem:${projectDir}/src/main/resources/db/migration"]
    configurations = ['flyway', 'runtimeClasspath'] as String[] // Flyway 태스크가 JDBC 드라이버 및 DB 플러그인을 인식하도록 Gradle configuration 지정
}
